--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -23,6 +23,7 @@
             <label for="page_keywords">KEYWORDS страницы</label>
             <input class="seo_input" id="page_keywords" value="{{ keywords }}">
                 <input type="hidden" id="page_target" value="contacts">
+                 <input type="hidden" id="page_type" value="static">
              <a  class="btn seo-btn" data-target="" href="javascript:void(0)" onclick="saveSEO(this)">Сохранить</a>
             </div>
 
