--- a/static/css/main.css
+++ b/static/css/main.css
@@ -340,16 +340,13 @@ h4 {
   margin: 50px 0 30px 0; }
 
 .admin-edit:hover {
-  border: 1px solid red;
-  padding: 10px;
-  cursor: pointer; }
+  border: 1px dashed red;
 
-.admin-edit:hover:after {
-  content: 'Редактировать';
-  background: red;
-  color: white;
-  position: relative;
-  bottom: -29px; }
+  cursor: pointer;
+  padding: 20px;
+}
+
+
 
 #bg {
   position: fixed;
@@ -797,6 +794,14 @@ footer {
 
 .edit-info-file + label:hover {
   cursor: pointer;
-  border: 1px solid red;
+  border: 1px dashed red;
   display: block;
   padding: 30px 0; }
+
+.del-img-button{
+  background: #f66059;
+  color: #fff;
+  padding: 10px;
+  display: inline-block;
+  text-decoration: none;
+}
