--- a/templates/header.html
+++ b/templates/header.html
@@ -11,7 +11,7 @@
         </nav>
 
         <div class="logo">
-            <img src="{% static 'img/logo.jpg' %}" alt="Швейное производство в Санкт-Петербурге">
+            <a href="{% url 'index' %}"><img src="{% static 'img/logo.jpg' %}" alt="Швейное производство в Санкт-Петербурге"></a>
             <span>Швейное производство в Санкт-Петербурге</span>
         </div>
         <div class="top-menu-buttons">
