--- a/templates/category.html
+++ b/templates/category.html
@@ -11,7 +11,7 @@
                     <li>{{ category.name }}</li>
                 </ul>
             </div>
-        {% if user.is_authenticated %}
+            {% if user.is_authenticated %}
                 <div>
                     <label for="page_title">TITLE страницы</label>
                     <input class="seo_input" id="page_title" value="{{ title }}">
@@ -20,12 +20,15 @@
                     <label for="page_keywords">KEYWORDS страницы</label>
                     <input class="seo_input" id="page_keywords" value="{{ keywords }}">
                     <input type="hidden" id="page_target" value="{{ category.id }}">
-                     <input type="hidden" id="page_type" value="category">
+                    <input type="hidden" id="page_type" value="category">
                     <a  class="btn seo-btn" data-target="" href="javascript:void(0)" onclick="saveSEO(this)">Сохранить</a>
                 </div>
 
             {% endif %}
             <h1 class="mb30">{{ category.name }}</h1>
+            {% if user.is_authenticated %}
+                <a style="display: inline-block; margin-bottom: 20px" class="btn" id="" data-cat_id="{{ category.id }}"  data-type="new" href="javascript:void(0)" onclick="newItem(this)">Добавить новый товар в эту категорию</a>
+            {% endif %}
             <div class="portfolio-items">
                 {% for item in items %}
                     <div class="portfolio-item">
@@ -47,6 +50,96 @@
         </div>
 
     </section>
+
+    {% if user.is_authenticated %}
+        <div style="display: none; overflow: auto" id="ModalItem" class="editModal">{% csrf_token %}
+            <div style="padding: 10px; text-align: left" id="modal-content" class="editmodal-content">
+                <label for="item_name">Название <sup>*</sup></label>
+                <input style="margin-bottom: 20px"  id="item_name" >
+                <label for="item_description">Описание товара</label>
+                <textarea style="margin-bottom: 20px"  id="item_description" ></textarea>
+                <label for="item_name">Минимальный заказ</label>
+                <input style="margin-bottom: 20px"  id="item_name" >
+                <label for="item_name">Минимальная цена (если не указано, то не отображается)</label>
+                <input style="margin-bottom: 20px"  id="item_name" >
+                <label for="item_name">Максимальная цена <sup>*</sup></label>
+                <input style="margin-bottom: 20px"  id="item_name" >
+
+                <label for="item_page_title">Title станицы</label>
+                <input  style="margin-bottom: 20px"  id="item_title" >
+                <label for="item_page_description">Description станицы</label>
+                <input  style="margin-bottom: 20px"   id="item_description" >
+                <label for="item_page_keywords">Keywords станицы</label>
+                <input style="margin-bottom: 20px"   id="item_keywords" >
+                <input  id="new_img" data-target="work" type="file" onchange="addImg(this)"  class="edit-info-file" multiple>
+                <label style="background: #f66059;
+                                            padding: 10px;
+                                            display: inline-block;
+                                            margin-bottom: 20px;
+                                            border-radius: 21px;
+                                            font-size: 13px;
+                                            color: #fff;" for="new_img"  >
+                    Добавить изображения для товара (необходимо выбрать сразу все нужные изображения)
+                </label>
+
+                <div id="item_images">
+                <img src="">
+
+                </div>
+
+                <div style="margin: 20px">
+                    <a style="background: #69bf69" class="btn"  id="saveItem" data-id="" data-type="" href="javascript:void(0)" onclick="saveItem(this)">сохранить</a>
+
+                    <a style="background: #878c8a" class="btn" href="javascript:void(0)" onclick="closeEditModalService()">отмена</a>
+                    <a style="background: red;margin-left: 100px;" class="btn"  id="deleteItem" data-id="" href="javascript:void(0)" onclick=" deleteItem(this)" >удалить</a>
+                    <span style="display: block;
+                            margin-top: 20px;
+                            color: red;
+                            font-weight: 600;
+                            text-align: center;" id="del_info">Удаление товара безвозвратно!</span>
+                </div>
+            </div>
+        </div>
+    {% endif %}
+    {% if user.is_authenticated %}
+
+        <script>
+
+
+
+            var csrfmiddlewaretoken = document.getElementsByName('csrfmiddlewaretoken')[0].defaultValue
+            let editmodal = document.getElementById('ModalItem');
+
+            function newItem(el) {
+                editmodal.style.display = "block";
+                CKEDITOR.replace( 'item_description' );
+            }
+
+            function addImg(el) {
+                let file = el.files
+                let target = el.dataset.target
+                let new_img = ''
+                let reader = new FileReader();
+                reader.onload = function(e) {
+                    $('#item_images').append("<img src="+' e.target.result '+">")
+                   console.log(e.target.result)
+                }
+
+                for (var i in el.files){
+                 reader.readAsDataURL(el.files[i]);
+                }
+
+
+
+
+            }
+
+            function closeEditModalService() {
+                editmodal.style.display = "none";
+            }
+
+        </script>
+    {% endif %}
 
 {% endblock %}
 
