--- a/templates/category_main.html
+++ b/templates/category_main.html
@@ -26,30 +26,32 @@
 
             {% endif %}
             <h1 class="mb30">Портфолию</h1>
-            <a style="display: inline-block; margin-bottom: 20px" class="btn" id=""  data-type="new" href="javascript:void(0)" onclick="newCategory(this)">Новая категория</a>
+            {% if user.is_authenticated %}
+                <a style="display: inline-block; margin-bottom: 20px" class="btn" id=""  data-type="new" href="javascript:void(0)" onclick="newCategory(this)">Новая категория</a>
+            {% endif %}
             <div class="portfolio-items">
                 {% for category in categories %}
                     {% if user.is_authenticated %}
-                    <div class="portfolio-main-item admin-edit">
-                        <a href="{% url 'portfolio_cat' category.name_slug %}">  <img src="{{ category.image.url }}" alt=""></a>
-                        <h5><a href="{% url 'portfolio_cat' category.name_slug %}">  {{ category.name }}</a></h5>
-                        <a style="display: inline-block; margin-bottom: 20px" class="btn" data-id="{{ category.id }}"
-                           data-title="{{ category.title }}"
-                           data-description="{{ category.description }}"
-                           data-keywords="{{ category.keywords }}"
-                           data-name="{{ category.name }}"
-                           data-image="{{ category.image.url }}"
+                        <div class="portfolio-main-item admin-edit">
+                            <a href="{% url 'portfolio_cat' category.name_slug %}">  <img src="{{ category.image.url }}" alt=""></a>
+                            <h5><a href="{% url 'portfolio_cat' category.name_slug %}">  {{ category.name }}</a></h5>
+                            <a style="display: inline-block; margin-bottom: 20px" class="btn" data-id="{{ category.id }}"
+                               data-title="{{ category.title }}"
+                               data-description="{{ category.description }}"
+                               data-keywords="{{ category.keywords }}"
+                               data-name="{{ category.name }}"
+                               data-image="{{ category.image.url }}"
 
-                           data-type="update" href="javascript:void(0)" onclick="newCategory(this)">Редактировать</a>
+                               data-type="update" href="javascript:void(0)" onclick="newCategory(this)">Редактировать</a>
 
-                    </div>
-                {% else %}
+                        </div>
+                    {% else %}
                         <div class="portfolio-main-item ">
-                        <a href="{% url 'portfolio_cat' category.name_slug %}">  <img src="{{ category.image.url }}" alt=""></a>
-                        <h5><a href="{% url 'portfolio_cat' category.name_slug %}">  {{ category.name }}</a></h5>
+                            <a href="{% url 'portfolio_cat' category.name_slug %}">  <img src="{{ category.image.url }}" alt=""></a>
+                            <h5><a href="{% url 'portfolio_cat' category.name_slug %}">  {{ category.name }}</a></h5>
 
-                    </div>
-                {% endif %}
+                        </div>
+                    {% endif %}
                 {% endfor %}
 
             </div>
@@ -84,7 +86,7 @@
                     <a style="background: #69bf69" class="btn"  id="saveCategory" data-id="" data-type="" href="javascript:void(0)" onclick="saveCategory(this)">сохранить</a>
 
                     <a style="background: #878c8a" class="btn" href="javascript:void(0)" onclick="closeEditModalService()">отмена</a>
-                     <a style="background: red;margin-left: 100px;" class="btn"  id="deleteCategory" data-id="" href="javascript:void(0)" onclick=" deleteCategory(this)" >удалить</a>
+                    <a style="background: red;margin-left: 100px;" class="btn"  id="deleteCategory" data-id="" href="javascript:void(0)" onclick=" deleteCategory(this)" >удалить</a>
                     <span style="display: block;
                             margin-top: 20px;
                             color: red;
