--- a/static/css/main.css
+++ b/static/css/main.css
@@ -795,7 +795,7 @@ footer {
 .edit-info-file + label:hover {
   cursor: pointer;
   border: 1px dashed red;
-  display: block;
+  display: inline-block;
   padding: 30px 0; }
 
 .del-img-button{
@@ -804,4 +804,8 @@ footer {
   padding: 10px;
   display: inline-block;
   text-decoration: none;
+}
+.previewImg{
+  padding-right: 15px;
+  width: 200px;
 }
